Add the about section

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
 .main {
     box-shadow: 0 0 17px 0 rgba(65, 131, 156, 0.65);
 }
-
+/***Start of Navigation bar***/
 .navbar-brand {
     color: #68a4c7 !important;
     font-size: 2.2em;
@@ -15,9 +15,11 @@ body {
 
 .nav-link {
     font-size: 1.2em;
-    color: #476472 !important;
+    color: #154861 !important;
 }
 
 .nav-link:hover {
 color: rgb(94, 134, 134) !important;
 }
+/***End of Navigation bar***/
+
