--- a/css/style.css
+++ b/css/style.css
@@ -28,4 +28,13 @@ color: rgb(94, 134, 134) !important;
     text-align: center;
 }
 
+.about-heading h2 {
+    font-size: 3.2rem;
+    font-weight: 700;
+    color: #154861;
+}
+
+.about-heading .second-h2 {
+    color: #68a4c7;
+}
 
