--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ color: rgb(94, 134, 134) !important;
 .project-container {
     padding-top: 5rem;
     background-color: hsl(212, 100%, 94%);
+    align-items: center;
 }
 
 .project-container h2 {
@@ -99,6 +100,10 @@ color: rgb(94, 134, 134) !important;
     color: #154861 !important;
     background: transparent;
     border: 1px solid ;
+}
+
+.card-body p{
+color: #2f5063;
 }
 /*** End of Project section ***/
 
