Add the footer section

--- a/css/style.css
+++ b/css/style.css
@@ -113,4 +113,6 @@ color: #2f5063;
     padding-bottom: 5rem;
 }
 /*** End of Contact form ***/
+/*** Start of Footer section ***/
+/*** End of Footer section ***/
 
