--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,14 @@ color: rgb(94, 134, 134) !important;
     border-radius: 10px;
 }
 
+.card p {
+    display: none;
+}
+
+.card:hover p {
+    display: block;
+}
+
 .card-btn {
     color: #154861 !important;
     background: transparent;
@@ -115,6 +123,15 @@ color: #2f5063;
 
 .social-icons a {
     color: black;
+}
+
+a {
+    text-decoration: none;
+    color: #fff;
+}
+
+a:hover {
+    color: #154861;
 }
 
 #arrow-up {
